--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </body>
 <script>
   var a = JSON.parse(`
-  [{"date":"星期五, 五月 12号","opp":"纽约尼克斯 vs 迈阿密热火","time":"4:30 PM","channel":735,"sorter":50028,"ee":"May 12"},{"date":"星期五, 五月 12号","opp":"金州勇士 vs 洛杉矶湖人","time":"7:00 PM","channel":735,"sorter":50031,"ee":"May 12"},{"date":"星期日, 五月 14号","opp":"费城76人 vs 波士顿凯尔特人","time":"TBD","channel":735,"sorter":50030,"ee":"May 14"}]
+    [{"date":"星期日, 五月 14号","opp":"费城76人 vs 波士顿凯尔特人","time":"12:30 PM","channel":707,"sorter":50038,"ee":"May 14"},{"date":"星期二, 五月 16号","opp":"洛杉矶湖人 vs 丹佛掘金","time":"5:30 PM","channel":735,"sorter":50033,"ee":"May 16"},{"date":"星期三, 五月 17号","opp":"迈阿密热火 vs TBD","time":"5:30 PM","channel":752,"sorter":50034,"ee":"May 17"},{"date":"星期四, 五月 18号","opp":"洛杉矶湖人 vs 丹佛掘金","time":"5:30 PM","channel":735,"sorter":50035,"ee":"May 18"},{"date":"星期五, 五月 19号","opp":"迈阿密热火 vs TBD","time":"5:30 PM","channel":752,"sorter":50036,"ee":"May 19"},{"date":"星期六, 五月 20号","opp":"丹佛掘金 vs 洛杉矶湖人","time":"5:30 PM","channel":707,"sorter":50037,"ee":"May 20"}]
   `);
 
 
