--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
     border: 1px solid #ccc;
     border-collapse: collapse;
   }
-  #toggle {
-    
+  #toggle-clip {
+    margin-top: 8px;
+    color: blue;
+    cursor: pointer;
+    display: block;
+    padding: 8px;
   }
   #laterTable {
     display: none;
@@ -59,6 +63,11 @@
   #card {
     margin-bottom: 31px;
   }
+  #ktla {
+    display: none;
+    margin: 0 auto;
+    width: 100%;
+  }
 </style>
 </head>
 <body>
@@ -72,6 +81,8 @@
     </table>
     <div id="toggle">完整时间表</div>
     <table id="laterTable">
+    <div id="toggle-clip">快船队在 KTLA 5 上的比赛</div>
+    <img id="ktla" src="clippers.png" />
     <thead><tr><th>日期</th><th>時間</th><th>電台</th><th>團隊</th></tr></thead>
       <tbody id="later"></tbody>
     </table>
@@ -91,7 +102,7 @@
 </body>
 <script>
   var a = JSON.parse(`
-[{"date":"星期六, 四月 20号","opp":"奧蘭多魔術 vs 克里夫蘭騎士","time":"10:00 AM","channel":735,"sorter":40030,"ee":"April 20"},{"date":"星期六, 四月 20号","opp":"菲尼克斯太阳 vs 明尼苏达森林狼","time":"12:30 PM","channel":735,"sorter":40044,"ee":"April 20"},{"date":"星期六, 四月 20号","opp":"费城76人 vs 纽约尼克斯","time":"3:00 PM","channel":735,"sorter":40035,"ee":"April 20"},{"date":"星期六, 四月 20号","opp":"洛杉矶湖人 vs 丹佛掘金","time":"5:30 PM","channel":707,"sorter":40037,"ee":"April 20"},{"date":"星期日, 四月 21号","opp":"迈阿密热火 vs 波士顿凯尔特人","time":"10:00 AM","channel":707,"sorter":40031,"ee":"April 21"},{"date":"星期日, 四月 21号","opp":"达拉斯獨行俠 vs 洛杉矶快船","time":"12:30 PM","channel":707,"sorter":40045,"ee":"April 21"},{"date":"星期日, 四月 21号","opp":"印第安纳步行者 vs 密尔沃基雄鹿","time":"4:00 PM","channel":752,"sorter":40037,"ee":"April 21"},{"date":"星期日, 四月 21号","opp":"新奥尔良鹈鹕 vs 俄克拉何马城雷霆","time":"6:30 PM","channel":752,"sorter":40039,"ee":"April 21"},{"date":"星期一, 四月 22号","opp":"费城76人 vs 纽约尼克斯","time":"4:30 PM","channel":752,"sorter":40038,"ee":"April 22"},{"date":"星期一, 四月 22号","opp":"洛杉矶湖人 vs 丹佛掘金","time":"7:00 PM","channel":752,"sorter":40041,"ee":"April 22"},{"date":"星期二, 四月 23号","opp":"菲尼克斯太阳 vs 明尼苏达森林狼","time":"4:30 PM","channel":752,"sorter":40039,"ee":"April 23"},{"date":"星期二, 四月 23号","opp":"达拉斯獨行俠 vs 洛杉矶快船","time":"7:00 PM","channel":752,"sorter":40042,"ee":"April 23"},{"date":"星期三, 四月 24号","opp":"迈阿密热火 vs 波士顿凯尔特人","time":"4:00 PM","channel":752,"sorter":40040,"ee":"April 24"},{"date":"星期三, 四月 24号","opp":"新奥尔良鹈鹕 vs 俄克拉何马城雷霆","time":"6:30 PM","channel":752,"sorter":40042,"ee":"April 24"},{"date":"星期四, 四月 25号","opp":"纽约尼克斯 vs 费城76人","time":"4:30 PM","channel":752,"sorter":40041,"ee":"April 25"},{"date":"星期四, 四月 25号","opp":"丹佛掘金 vs 洛杉矶湖人","time":"7:00 PM","channel":752,"sorter":40044,"ee":"April 25"},{"date":"星期五, 四月 26号","opp":"密尔沃基雄鹿 vs 印第安纳步行者","time":"2:30 PM","channel":735,"sorter":40040,"ee":"April 26"},{"date":"星期五, 四月 26号","opp":"洛杉矶快船 vs 达拉斯獨行俠","time":"5:00 PM","channel":735,"sorter":40043,"ee":"April 26"},{"date":"星期五, 四月 26号","opp":"明尼苏达森林狼 vs 菲尼克斯太阳","time":"7:30 PM","channel":735,"sorter":40045,"ee":"April 26"},{"date":"星期六, 四月 27号","opp":"克里夫蘭騎士 vs 奧蘭多魔術","time":"10:00 AM","channel":752,"sorter":40037,"ee":"April 27"},{"date":"星期六, 四月 27号","opp":"俄克拉何马城雷霆 vs 新奥尔良鹈鹕","time":"12:30 PM","channel":752,"sorter":40051,"ee":"April 27"},{"date":"星期六, 四月 27号","opp":"波士顿凯尔特人 vs 迈阿密热火","time":"3:00 PM","channel":752,"sorter":40042,"ee":"April 27"},{"date":"星期六, 四月 27号","opp":"丹佛掘金 vs 洛杉矶湖人","time":"5:30 PM","channel":707,"sorter":40044,"ee":"April 27"},{"date":"星期日, 四月 28号","opp":"纽约尼克斯 vs 费城76人","time":"10:00 AM","channel":707,"sorter":40038,"ee":"April 28"},{"date":"星期日, 四月 28号","opp":"洛杉矶快船 vs 达拉斯獨行俠","time":"12:30 PM","channel":707,"sorter":40052,"ee":"April 28"},{"date":"星期日, 四月 28号","opp":"密尔沃基雄鹿 vs 印第安纳步行者","time":"4:00 PM","channel":752,"sorter":40044,"ee":"April 28"},{"date":"星期日, 四月 28号","opp":"明尼苏达森林狼 vs 菲尼克斯太阳","time":"6:30 PM","channel":752,"sorter":40046,"ee":"April 28"}]
+[{"date":"星期二, 十月 22号","opp":"纽约尼克斯 vs 波士顿凯尔特人","time":"4:30 PM","channel":752,"sorter":638,"ee":"October 22"},{"date":"星期二, 十月 22号","opp":"明尼苏达森林狼 vs 洛杉矶湖人","time":"7:00 PM","channel":752,"sorter":641,"ee":"October 22"},{"date":"星期三, 十月 23号","opp":"密尔沃基雄鹿 vs 费城76人","time":"4:30 PM","channel":735,"sorter":639,"ee":"October 23"},{"date":"星期三, 十月 23号","opp":"菲尼克斯太阳 vs 洛杉矶快船","time":"7:00 PM","channel":735,"sorter":642,"ee":"October 23"},{"date":"星期四, 十月 24号","opp":"聖安東尼奧馬刺 vs 达拉斯獨行俠","time":"4:30 PM","channel":752,"sorter":640,"ee":"October 24"},{"date":"星期四, 十月 24号","opp":"俄克拉何马城雷霆 vs 丹佛掘金","time":"7:00 PM","channel":752,"sorter":643,"ee":"October 24"},{"date":"星期五, 十月 25号","opp":"印第安纳步行者 vs 纽约尼克斯","time":"4:30 PM","channel":735,"sorter":641,"ee":"October 25"},{"date":"星期五, 十月 25号","opp":"菲尼克斯太阳 vs 洛杉矶湖人","time":"7:00 PM","channel":735,"sorter":644,"ee":"October 25"},{"date":"星期六, 十月 26号","opp":"洛杉矶快船 vs 丹佛掘金","time":"2:00 PM","channel":738,"sorter":640,"ee":"October 26"},{"date":"星期六, 十月 26号","opp":"沙加緬度國王 vs 洛杉矶湖人","time":"7:30 PM","channel":787,"sorter":645,"ee":"October 26"},{"date":"星期日, 十月 27号","opp":"洛杉矶快船 vs 金州勇士","time":"5:30 PM","channel":738,"sorter":644,"ee":"October 27"},{"date":"星期一, 十月 28号","opp":"洛杉矶湖人 vs 菲尼克斯太阳","time":"7:00 PM","channel":787,"sorter":647,"ee":"October 28"},{"date":"星期二, 十月 29号","opp":"达拉斯獨行俠 vs 明尼苏达森林狼","time":"4:30 PM","channel":752,"sorter":645,"ee":"October 29"},{"date":"星期二, 十月 29号","opp":"新奥尔良鹈鹕 vs 金州勇士","time":"7:00 PM","channel":752,"sorter":648,"ee":"October 29"},{"date":"星期三, 十月 30号","opp":"洛杉矶湖人 vs 克里夫蘭騎士","time":"4:00 PM","channel":787,"sorter":646,"ee":"October 30"},{"date":"星期三, 十月 30号","opp":"波士顿凯尔特人 vs 印第安纳步行者","time":"4:00 PM","channel":735,"sorter":646,"ee":"October 30"},{"date":"星期三, 十月 30号","opp":"聖安東尼奧馬刺 vs 俄克拉何马城雷霆","time":"6:30 PM","channel":735,"sorter":648,"ee":"October 30"},{"date":"星期三, 十月 30号","opp":"波特兰开拓者 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":649,"ee":"October 30"},{"date":"星期四, 十月 31号","opp":"菲尼克斯太阳 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":650,"ee":"October 31"},{"date":"星期五, 十一月 1号","opp":"奧蘭多魔術 vs 克里夫蘭騎士","time":"4:00 PM","channel":735,"sorter":717,"ee":"November 1"},{"date":"星期五, 十一月 1号","opp":"洛杉矶湖人 vs 多伦多猛龙","time":"4:30 PM","channel":787,"sorter":717,"ee":"November 1"},{"date":"星期五, 十一月 1号","opp":"丹佛掘金 vs 明尼苏达森林狼","time":"6:30 PM","channel":735,"sorter":719,"ee":"November 1"},{"date":"星期六, 十一月 2号","opp":"俄克拉何马城雷霆 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":721,"ee":"November 2"},{"date":"星期一, 十一月 4号","opp":"洛杉矶湖人 vs 底特律活塞","time":"4:30 PM","channel":787,"sorter":720,"ee":"November 4"},{"date":"星期一, 十一月 4号","opp":"聖安東尼奧馬刺 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":723,"ee":"November 4"},{"date":"星期三, 十一月 6号","opp":"金州勇士 vs 波士顿凯尔特人","time":"4:30 PM","channel":735,"sorter":722,"ee":"November 6"},{"date":"星期三, 十一月 6号","opp":"洛杉矶湖人 vs 孟菲斯灰熊","time":"5:00 PM","channel":787,"sorter":723,"ee":"November 6"},{"date":"星期三, 十一月 6号","opp":"费城76人 vs 洛杉矶快船","time":"7:00 PM","channel":735,"sorter":725,"ee":"November 6"},{"date":"星期五, 十一月 8号","opp":"菲尼克斯太阳 vs 达拉斯獨行俠","time":"4:30 PM","channel":735,"sorter":724,"ee":"November 8"},{"date":"星期五, 十一月 8号","opp":"费城76人 vs 洛杉矶湖人","time":"7:00 PM","channel":735,"sorter":727,"ee":"November 8"},{"date":"星期五, 十一月 8号","opp":"洛杉矶快船 vs 沙加緬度國王","time":"7:00 PM","channel":738,"sorter":727,"ee":"November 8"},{"date":"星期六, 十一月 9号","opp":"多伦多猛龙 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":728,"ee":"November 9"},{"date":"星期日, 十一月 10号","opp":"多伦多猛龙 vs 洛杉矶湖人","time":"6:30 PM","channel":787,"sorter":728,"ee":"November 10"},{"date":"星期一, 十一月 11号","opp":"洛杉矶快船 vs 俄克拉何马城雷霆","time":"5:00 PM","channel":738,"sorter":728,"ee":"November 11"},{"date":"星期二, 十一月 12号","opp":"纽约尼克斯 vs 费城76人","time":"4:30 PM","channel":752,"sorter":728,"ee":"November 12"},{"date":"星期二, 十一月 12号","opp":"达拉斯獨行俠 vs 金州勇士","time":"7:00 PM","channel":752,"sorter":731,"ee":"November 12"},{"date":"星期三, 十一月 13号","opp":"新奥尔良鹈鹕 vs 俄克拉何马城雷霆","time":"4:30 PM","channel":735,"sorter":729,"ee":"November 13"},{"date":"星期三, 十一月 13号","opp":"洛杉矶快船 vs 休斯敦火箭","time":"5:00 PM","channel":738,"sorter":730,"ee":"November 13"},{"date":"星期三, 十一月 13号","opp":"孟菲斯灰熊 vs 洛杉矶湖人","time":"7:00 PM","channel":735,"sorter":732,"ee":"November 13"},{"date":"星期五, 十一月 15号","opp":"洛杉矶湖人 vs 聖安東尼奧馬刺","time":"4:30 PM","channel":735,"sorter":731,"ee":"November 15"},{"date":"星期五, 十一月 15号","opp":"洛杉矶快船 vs 休斯敦火箭","time":"5:00 PM","channel":738,"sorter":732,"ee":"November 15"},{"date":"星期五, 十一月 15号","opp":"孟菲斯灰熊 vs 金州勇士","time":"7:00 PM","channel":735,"sorter":734,"ee":"November 15"},{"date":"星期六, 十一月 16号","opp":"洛杉矶湖人 vs 新奥尔良鹈鹕","time":"5:00 PM","channel":787,"sorter":733,"ee":"November 16"},{"date":"星期日, 十一月 17号","opp":"犹他爵士 vs 洛杉矶快船","time":"6:00 PM","channel":738,"sorter":735,"ee":"November 17"},{"date":"星期一, 十一月 18号","opp":"金州勇士 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":737,"ee":"November 18"},{"date":"星期二, 十一月 19号","opp":"克里夫蘭騎士 vs 波士顿凯尔特人","time":"4:00 PM","channel":752,"sorter":735,"ee":"November 19"},{"date":"星期二, 十一月 19号","opp":"俄克拉何马城雷霆 vs 聖安東尼奧馬刺","time":"6:30 PM","channel":752,"sorter":737,"ee":"November 19"},{"date":"星期二, 十一月 19号","opp":"犹他爵士 vs 洛杉矶湖人","time":"7:30 PM","channel":787,"sorter":738,"ee":"November 19"},{"date":"星期三, 十一月 20号","opp":"芝加哥公牛 vs 密尔沃基雄鹿","time":"4:30 PM","channel":735,"sorter":736,"ee":"November 20"},{"date":"星期三, 十一月 20号","opp":"纽约尼克斯 vs 菲尼克斯太阳","time":"7:00 PM","channel":735,"sorter":739,"ee":"November 20"},{"date":"星期三, 十一月 20号","opp":"奧蘭多魔術 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":739,"ee":"November 20"},{"date":"星期四, 十一月 21号","opp":"奧蘭多魔術 vs 洛杉矶湖人","time":"7:30 PM","channel":787,"sorter":740,"ee":"November 21"},{"date":"星期五, 十一月 22号","opp":"印第安纳步行者 vs 密尔沃基雄鹿","time":"4:30 PM","channel":735,"sorter":738,"ee":"November 22"},{"date":"星期五, 十一月 22号","opp":"达拉斯獨行俠 vs 丹佛掘金","time":"7:00 PM","channel":735,"sorter":741,"ee":"November 22"},{"date":"星期五, 十一月 22号","opp":"沙加緬度國王 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":741,"ee":"November 22"},{"date":"星期六, 十一月 23号","opp":"丹佛掘金 vs 洛杉矶湖人","time":"7:30 PM","channel":787,"sorter":742,"ee":"November 23"},{"date":"星期日, 十一月 24号","opp":"洛杉矶快船 vs 费城76人","time":"3:00 PM","channel":738,"sorter":739,"ee":"November 24"},{"date":"星期一, 十一月 25号","opp":"洛杉矶快船 vs 波士顿凯尔特人","time":"4:30 PM","channel":738,"sorter":741,"ee":"November 25"},{"date":"星期二, 十一月 26号","opp":"密尔沃基雄鹿 vs 迈阿密热火","time":"4:30 PM","channel":752,"sorter":742,"ee":"November 26"},{"date":"星期二, 十一月 26号","opp":"洛杉矶湖人 vs 菲尼克斯太阳","time":"7:00 PM","channel":752,"sorter":745,"ee":"November 26"},{"date":"星期三, 十一月 27号","opp":"洛杉矶快船 vs 华盛顿奇才","time":"4:00 PM","channel":738,"sorter":743,"ee":"November 27"},{"date":"星期三, 十一月 27号","opp":"纽约尼克斯 vs 达拉斯獨行俠","time":"4:30 PM","channel":735,"sorter":743,"ee":"November 27"},{"date":"星期三, 十一月 27号","opp":"洛杉矶湖人 vs 聖安東尼奧馬刺","time":"5:30 PM","channel":787,"sorter":744,"ee":"November 27"},{"date":"星期三, 十一月 27号","opp":"俄克拉何马城雷霆 vs 金州勇士","time":"7:00 PM","channel":735,"sorter":746,"ee":"November 27"},{"date":"星期五, 十一月 29号","opp":"洛杉矶快船 vs 明尼苏达森林狼","time":"4:30 PM","channel":735,"sorter":745,"ee":"November 29"},{"date":"星期五, 十一月 29号","opp":"俄克拉何马城雷霆 vs 洛杉矶湖人","time":"7:00 PM","channel":735,"sorter":748,"ee":"November 29"},{"date":"星期日, 十二月 1号","opp":"洛杉矶湖人 vs 犹他爵士","time":"5:00 PM","channel":787,"sorter":818,"ee":"December 1"},{"date":"星期日, 十二月 1号","opp":"丹佛掘金 vs 洛杉矶快船","time":"7:00 PM","channel":738,"sorter":820,"ee":"December 1"},{"date":"星期一, 十二月 2号","opp":"洛杉矶湖人 vs 明尼苏达森林狼","time":"5:00 PM","channel":787,"sorter":819,"ee":"December 2"}]
   `);
 
 
@@ -159,6 +170,15 @@
     var display = el.style.display;
     var isVisible = display === 'table';
     el.style.display = isVisible ? 'none' : 'table';
+    document.body.style.overflow = isVisible ? 'hidden' : 'visible';
+    window.scrollTo(0, 0);
+  });
+
+  document.getElementById('toggle-clip').addEventListener('click', function() {
+    var el = document.getElementById('ktla');
+    var display = el.style.display;
+    var isVisible = display === 'block';
+    el.style.display = isVisible ? 'none' : 'block';
     document.body.style.overflow = isVisible ? 'hidden' : 'visible';
     window.scrollTo(0, 0);
   });
